@@ -1,10 +1,10 @@
 body {
   background: white;
   color: black;
+  font-family: Candara, Sans-Serif;
   margin: 0px;
   padding: 0px;
-  font-size: 0.9em;
-  line-height: 135%;
+  font-size: 10pt;
 }
 
 a {
@@ -14,7 +14,7 @@ a {
   font-weight: bold;
 }
 
-a:hover {
+a[href]:hover {
   background: transparent;
   color: #991e1e;
   text-decoration: underline;
@@ -132,17 +132,11 @@ div.sponsbox {
   border-style: solid;
   border-color: #d0d0d0;
   border-width: 1px;
-/* 
-  border-spacing: 0px;
-  font-size: 90%;
-  padding-top: .5em;
-*/
   padding-left: .66em;
   font-weight: bold;
   vertical-align: top;
   left: 0px;
 }
-
 
 div.sub {
   background: #f5f5f5; 
@@ -178,14 +172,12 @@ div.westbar {
   left: 0em; 
   position: absolute; 
   /* height: 100%; */
-  font-size: 12px;
+  font-size: 9pt;
   border-right-style: solid;
   border-right-color: #d0d0d0; 
   border-right-width: 1px;
 }
 
-/* These were being used per id but there were two duplicate id's each.
-   These individual properties have been moved to the images to which they were applied in titlebar.php.
 acronym, .help {
   border-bottom: 1px dashed #9999cc;
   cursor: help;
@@ -207,12 +199,17 @@ dl.doc {
   border-width: 1px;
 }
 
-dt.doc {
-  font-weight: bolder;
-  font-size: 110%;
-  padding-top: .5em;
-  }
+dt {
+  font-weight: bold;
+  margin-left: 3em;
+  margin-top: 2em;
+  margin-bottom: .5em;
+}
   
+dd {
+  margin: .5em .5em .5em 5em;
+}
+
 em.arg {
   color: #8b0000; /* darkred; */
   font-weight: normal;
@@ -269,16 +266,18 @@ form {
 }
 
 h1 {
-  background: #f5f5f5;
   color: black;
+  padding: 5px;
+  background: #f5f5f5;
   border-style: solid;
   border-color: #d0d0d0;
   border-width: 1px;
-  padding: 5px;
   margin-bottom: 30px;
+  margin-top: 5px;
   font-weight: bold;
   font-size: 110%;
   text-align: center;
+  text-transform: capitalize;
   clear: left;
 }
 
@@ -309,9 +308,8 @@ h5 {
   font-size: 100%;
 }
 
-iframe
-{
-  margin:1%;
+iframe {
+  margin: 1%;
 }
 
 img {
@@ -337,6 +335,11 @@ li {
   margin-right: 40px;
 }
 
+li table {
+  margin: 1em 0px;
+  width: 100%;
+}
+
 .list li {
   padding-bottom: 1.2em;
 }
@@ -346,14 +349,13 @@ li {
 }
 
 p {
-  /*
-  margin: 1.33em 0px;
-  margin-left: 40px;
-  margin-right: 40px;
-  */
-  margin: 1.33em 40px;
+  margin: 0.75em 0px;
+  text-align: left;
 }
 
+p+h3, pre+h3, ul+h3, ol+h3, dl+h3 {
+  margin-top: 2em;
+}
 
 p.code {
   color: black;
@@ -366,7 +368,6 @@ p.code {
   padding: .66em 1.33em;
 }
 
-
 p.crt {
   white-space: nowrap;
   border-style: ridge;
@@ -375,6 +376,7 @@ p.crt {
   color: white;
   background: #000044;
   font-family: monospace;
+  font-size: 9pt;
   margin: 1.33em 40px; 
   padding: .66em 1.33em;
 }
@@ -429,7 +431,6 @@ p.image-slices img {
   margin-right: auto;
 }
 
-
 p.navigation-index {
   padding: 10px;
   margin-top: 1px;
@@ -444,7 +445,6 @@ p.navigation-index {
 
 p.options {
   padding: 0 3em;
-/*  text-align:justify; */
 }
 
 p.pre {
@@ -464,34 +464,29 @@ p.text {
   padding: 1.33em;
 }
 
-
 p.warn {
   padding: .66em 3em; 
   background: #ffeedd;
 }
 
-
 pre {
   padding-top: 0pt;
   padding-bottom: 0pt;
   margin: 0pt;
+  font-size: 90%;
 }
 
 pre.code {
   color: black;
   background: #f5f5f5;
-  border: 1pt dashed #2f6fab;
+  border: solid 2px black;
   font-family: monospace;
-  font-size: 8pt;
   white-space: pre;
-  /*
   margin: 1.33em 0px;
   margin-left: 40px;
   margin-right: 40px;
-  */
-  margin: 1.33em 40px;
-  padding: .66em 1.33em;
-  
+  padding: 1.33em;
+  font-size: 90%;
 }
 
 pre.crt {
@@ -513,19 +508,16 @@ pre.debug {
 
 pre.text {
   color: black;
-  background: #d2ddf6;
+  background: #ddddff;
   font-family: monospace;
   white-space: pre;
-  margin: 1.33em 40px;
-/*
+  margin: 1.33em 0px;
   margin-left: 40px;
   margin-right: 40px;
-*/
   padding: 1.33em;
 }
 
 span.bull {
-/*   padding: 0 .25em 0 0; */
   color: #d0d0d0;
 }
 
@@ -537,8 +529,6 @@ span.crtin {
 
 span.crtout, .crtprompt {
   color: #ffff77;
-/*   font-family: Times, serif; */
-/*  margin: 1.33em 40px; */
   padding-top: .67em;
   padding-bottom: .67em;
 }
@@ -550,11 +540,9 @@ span.crtout {
 }
 
 span.crtprompt {
-/*  padding-left: .66em; */
   padding-right: 0;
   text-indent:-1.33em; 
 }
-
 
 span.different {
   font-weight: bold;
@@ -599,6 +587,11 @@ table.doc td,th {
   padding: .3em .5em;
 }
 
+td {
+  text-align: left;
+  padding: .5em;
+}
+
 td.map {
   margin: 0px;
   padding: 0px;
@@ -607,6 +600,8 @@ td.map {
 th {
   background-color: #d2ddf6;
   color: black
+  text-align: left;
+  padding: .5em;
 }
 
 th.size-alt, tr.size-alt, td.size-alt {
